Agregado hasta p6